--- a/src/feature/Login/login.css
+++ b/src/feature/Login/login.css
@@ -109,7 +109,7 @@
     width: 100%;
     height: 50px;
     border-radius: 25px;
-    background: #57b846;
+    background: #1dbfaf;
     display: -webkit-box;
     display: -webkit-flex;
     display: -moz-box;
@@ -122,4 +122,15 @@
     -o-transition: all .4s;
     -moz-transition: all .4s;
     transition: all .4s;
+}
+.title-login-edu {
+    text-align: center;
+    margin-bottom: 10px;
+}
+.logo-login-edu {
+    padding-bottom: 10px;
+    font-size: 32px;
+    font-weight: 600;
+    text-decoration: none;
+    color: #ffffff;
 }
