--- a/src/feature/Register/Register.css
+++ b/src/feature/Register/Register.css
@@ -30,7 +30,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    padding: 177px 130px 33px 95px;
+    padding: 50px 130px 33px 95px;
 }
 .login100-form {
     width: 250px;
@@ -43,7 +43,7 @@
     text-align: center;
     width: 100%;
     display: block;
-    padding-bottom: 54px;
+    padding-bottom: 5px;
 }
 .validate-input {
     position: relative;
@@ -52,7 +52,7 @@
     position: relative;
     width: 100%;
     z-index: 1;
-    margin-bottom: 10px;
+    margin-bottom: 25px;
 }
 .input100 {
     font-family: Poppins-Medium;
@@ -109,7 +109,7 @@
     width: 100%;
     height: 50px;
     border-radius: 25px;
-    background: #57b846;
+    background: #1dbfaf;
     display: -webkit-box;
     display: -webkit-flex;
     display: -moz-box;
@@ -122,4 +122,15 @@
     -o-transition: all .4s;
     -moz-transition: all .4s;
     transition: all .4s;
+}
+.title-login-edu {
+    text-align: center;
+    margin-bottom: 10px;
+}
+.logo-login-edu {
+    padding-bottom: 10px;
+    font-size: 32px;
+    font-weight: 600;
+    text-decoration: none;
+    color: #ffffff;
 }
