--- a/src/feature/Home/Home.css
+++ b/src/feature/Home/Home.css
@@ -14,7 +14,5 @@
     background-size: cover;
     background-attachment: scroll;
     background-position: top center;
-    background-repeat: no-repeat;
-
-    
+    background-repeat: no-repeat
 }
